--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,28 +21,28 @@ jobs:
       - uses: actions/checkout@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: guylhermeplays
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/setup-qemu-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: guylhermeplays
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/setup-buildx-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: guylhermeplays
           password: ${{ secrets.REGISTRY_TOKEN }}
           buildkitd-flags: --debug
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: guylhermeplays
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: guylhermeplays
           password: ${{ secrets.REGISTRY_TOKEN }}
           context: ./
           file: ./Dockerfile
