--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Fivem
+name: FiveM Server Arm64 v1
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
